<resources>
    <string name="app_name">玩安卓</string>

    <string name="network_connection_failed">网络连接失败</string>
    <string name="network_request_timeout">网络请求超时</string>
    <string name="api_data_parse_error">数据解析错误</string>
    <string name="load_failed">加载失败，请点击重试</string>
    <string name="load_end">没有更多了</string>
    <string name="load_complete">加载完成</string>
    <string name="loading">请稍等&#8230;</string>
    <string name="login_ing">正在登录&#8230;</string>
    <string name="register_ing">正在注册&#8230;</string>
    <string name="reload">重新加载</string>
    <string name="network_not_available">网络似乎出了点问题&#8230;</string>
    <string name="no_data">没有相关数据</string>

    <string name="search_hint">搜索关键词以空格隔开</string>

    <string name="home_mine_title">个人中心</string>
    <string name="home_mine_integral">积分中心</string>
    <string name="home_mine_collect">我的收藏</string>
    <string name="home_mine_history">历史记录</string>
    <string name="home_mine_setting">设置</string>
    <string name="home_mine_login">登录/注册</string>

    <string name="navigation_title">导航</string>
    <string name="sys_title">体系</string>
    <string name="history_title">历史记录</string>

    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="re_password">确认密码</string>
    <string name="register">注册</string>
    <string name="login_wan_android">WANANDROID</string>
    <string name="exit_login">退出登录</string>
    <string name="exit_login_success">已退出登录</string>

    <string name="integral_title">我的积分</string>
    <string name="integral_rank">排行榜</string>

    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="refresh_success">刷新成功</string>
    <string name="empty_hint">没有任何数据~</string>
    <string name="collect_cancel">取消收藏</string>
    <string name="collect_title">我的收藏</string>

    <string name="operate_success">操作成功</string>
    <string name="operate_fail">操作失败</string>
</resources>