<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.example.mvvm_wan_kot.ui.login.register.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="50dp"
            android:id="@+id/loginIcon"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginIcon"
            android:id="@+id/loginWanAndroid"
            android:text="@string/login_wan_android"
            android:textSize="20sp"
            android:textColor="@color/textColorPrimary"
            android:layout_marginTop="12dp"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAccount"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/loginWanAndroid"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={vm.account}"
                afterTextChanged="@{vm.verifyInput}"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAccount"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/textColorThird"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textColorPrimary"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:text="@={vm.password}"
                afterTextChanged="@{vm.verifyInput}"
                android:singleLine="true"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRePassword"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/re_password"
            android:textColorHint="@color/textColorThird"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textColorPrimary"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={vm.rePassword}"
                afterTextChanged="@{vm.verifyInput}"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.mvvm_wan_kot.common.view.statebutton.StateButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tilRePassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            android:textSize="14sp"
            android:enabled="@{vm.uiState.btnEnabled}"
            android:onClick="@{() -> vm.register()}"
            app:radius="20dp"
            app:unableBackgroundColor="@color/grayDark"
            app:normalBackgroundColor="@color/main_select_color"
            app:pressedBackgroundColor="@color/main_select_color"
            app:normalTextColor="@color/bgColorPrimary"
            app:pressedTextColor="@color/bgColorPrimary"
            app:unableTextColor="@color/textColorPrimary"
            android:id="@+id/login"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>