<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.example.mvvm_wan_kot.ui.main.mine.MineViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/bgColorThird"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/home_mine_title"
            android:layout_height="45dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:textSize="15sp"
            android:background="@color/bgColorPrimary"
            android:id="@+id/homeMineTitle"
            android:textColor="@color/textColorPrimary"/>
        <ImageView
            android:layout_width="60dp"
            android:id="@+id/homeMineHead"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toBottomOf="@+id/homeMineTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="25dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/textColorPrimary"
            android:id="@+id/homeMineName"
            android:text='@{"name:"+vm.uiState.userName}'
            app:layout_constraintTop_toBottomOf="@+id/homeMineHead"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="12dp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/homeMineName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/homeMineId"
             android:text='@{"id:"+vm.uiState.userId}'
            android:textSize="12sp"
            android:textColor="@color/textColorSecondary"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/homeMineId"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/bgColorPrimary"
            android:id="@+id/homeMineIntegral"
            android:elevation="2dp"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/home_mine_integral"
                />
            <TextView
                android:layout_marginStart="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_mine_integral"
                android:textSize="15sp"
                android:textColor="@color/textColorPrimary"
               />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/homeMineIntegral"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/bgColorPrimary"
            android:id="@+id/homeMineCollect"
            android:elevation="2dp"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/home_mine_collect"
                />
            <TextView
                android:layout_marginStart="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_mine_collect"
                android:textSize="15sp"
                android:textColor="@color/textColorPrimary"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/homeMineCollect"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/bgColorPrimary"
            android:id="@+id/homeMineHistory"
            android:elevation="2dp"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/home_mine_history"
                />
            <TextView
                android:layout_marginStart="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_mine_history"
                android:textSize="15sp"
                android:textColor="@color/textColorPrimary"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/homeMineHistory"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/bgColorPrimary"
            android:id="@+id/homeMineSetting"
            android:elevation="2dp"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/home_mine_setting"
                />
            <TextView
                android:layout_marginStart="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_mine_setting"
                android:textSize="15sp"
                android:textColor="@color/textColorPrimary"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>